--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-SQLALCHEMY_DATABASE_URI=sqlite:///site.db
+FLASK_SQLALCHEMY_DATABASE_URI=sqlite:///site.db
 SQLALCHEMY_TRACK_MODIFICATIONS=False
-SECRET_KEY=M1U5T6VDFH68
+FLASK_SECRET_KEY=M1U5T6VDFH68
 JWT_SECRET_KEY=FG89JK07GVC5 
 JWT_TOKEN_LOCATION=cookies
 JT_COOKIE_SECURE=False  
 JWT_COOKIE_CSRF_PROTECT=True
+FLASK_SQLALCHEMY_ECHO=True
+FLASK_DEBUG=True
